--- a/mipsel-elf-binutils/PKGBUILD
+++ b/mipsel-elf-binutils/PKGBUILD
@@ -8,24 +8,30 @@ arch=("i686" "x86_64")
 url="http://www.gnu.org/software/binutils"
 license=("GPL-3.0-or-later")
 source=("http://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz")
+depends=(runtime-musl)
+makedepends=(runtime-musl-devel)
+
+. "../runtime-musl/env.sh"
 
 prepare() {
-	cd "binutils-$pkgver"
-	mkdir -v build
+	mkdir -p "binutils-$pkgver-build"
 }
 
 build() {
-	cd "binutils-$pkgver"/build
-	../configure --prefix=/opt/candyk/arch/mipsel-elf --target=mipsel-elf \
-		--disable-multilib --disable-nls --enable-lto \
-		--enable-plugins --with-mmap --disable-shared \
-		--disable-gold --disable-werror --with-float=soft
+	cd "binutils-$pkgver"-build
+	../"binutils-$pkgver"/configure --prefix=/opt/candyk/arch/mipsel-elf --target=mipsel-elf \
+		--disable-multilib \
+		--disable-nls \
+		--disable-shared \
+		--enable-lto \
+		--disable-werror \
+		--with-float=soft
 	make configure-host
-	make LDFLAGS="-all-static"
+	make LDFLAGS="$_runtimeldflags"
 }
 
 package() {
-	cd "binutils-$pkgver"/build
+	cd "binutils-$pkgver"-build
 	make DESTDIR="$pkgdir" install
 	rm "$pkgdir"/opt/candyk/arch/mipsel-elf/share/info/dir
 }
